--- a/src/componets/HomePage/HomePage.css
+++ b/src/componets/HomePage/HomePage.css
@@ -1,3 +1,25 @@
 * {
     box-sizing: border-box;    
 }
+
+.cardDisplay {
+    border: 1px solid blue;
+    height: 90vh;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.loader {
+        border-top: 16px solid blue;
+        border-right: 16px solid green;
+        border-bottom: 16px solid red;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
