--- a/src/componets/HomePage/HomePage.css
+++ b/src/componets/HomePage/HomePage.css
@@ -10,9 +10,10 @@
 }
 
 .loader {
-        border-top: 16px solid blue;
-        border-right: 16px solid green;
-        border-bottom: 16px solid red;
+    border-top: 16px solid rgb(67%, 84%, 5%);
+    border-right: 16px solid;
+    border-bottom: 16px solid rgb(87%, 8%, 55%);
+    border-left: 16px solid rgb(97%, 56%, 36%); 
     border-radius: 50%;
     width: 120px;
     height: 120px;
