white space has been removed

--- a/src/componets/HomePage/HomePage.css
+++ b/src/componets/HomePage/HomePage.css
@@ -6,7 +6,10 @@
     border: 1px solid blue;
     height: 90vh;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .loader {
