--- a/src/componets/NavBar/Nav.css
+++ b/src/componets/NavBar/Nav.css
@@ -1,20 +1,81 @@
+/* /* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+} 
+/* Grant's code */
+
 * {
     box-sizing: border-box;
 }
 
 .navbar {
-    border: 1px solid red;
+    background: black;
     height: 50px;
+    color: white;
     display: flex;
     flex-direction: reverse;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px; 
 }
 
-/* .search {
-
-} */
+li {
+    list-style: none;
+    margin: 0 1rem;
+    transition: .3s;
+}
+  
+li:hover {
+    color: #ffffff77;
+    cursor: pointer;
+}
+  
+.searchButton {
+    border-radius: 7px;
+}
 
 .loginAndRegister {
     border: 1px solid blue;
@@ -23,4 +84,19 @@
     flex-direction: column;
     justify-content: space-between;
     margin-right: 20px;
-}   
+}  
+
+.menuIcon {
+    /* color: red; */
+    border: 1px solid blue;
+    padding: .3rem 1rem;
+    border-radius: 7px;
+    display: none !important;
+    margin-right: 1rem;
+}
+
+@media(min-width: 1000px) {
+    .menuIcon{
+        display: inline-block !important;
+    }
+}
